# airflow-data-quality-pipeline

./: .dockerignore  .env.example  .gitattributes  .gitignore  DATA_LICENSE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
dags/: retail_data_quality_pipeline.py
data/processed/marts/: country_revenue.csv  customer_revenue.csv  daily_revenue.csv  product_revenue.csv
data/raw/: customers.csv  order_items.csv  orders.csv
docs/: airflow_validation.md  architecture.md  operations.md  results_snapshot.md
reports/: airflow_validation.json  dataset_preparation_report.json  quality_report.json  run_summary.json
src/retail_pipeline/: __init__.py  api.py  cli.py  io.py  logging_config.py  pipeline.py  quality.py  settings.py  warehouse.py
src/retail_pipeline/datasets/: uci_online_retail.py
tests/: conftest.py  test_api.py  test_cli.py  test_dataset.py  test_io.py  test_pipeline.py  test_quality.py  test_settings.py  test_warehouse.py
