[project]
name = "airflow-data-quality-pipeline"
version = "0.1.0"
description = "Backend-first retail data pipeline with Airflow DAG, quality gates, DuckDB marts, and a FastAPI results API."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Iago Aragao" }
]
dependencies = [
  "duckdb>=1.0",
  "fastapi>=0.115",
  "pandas>=2.2",
  "pydantic>=2.8",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
airflow = [
  "apache-airflow>=2.9,<3",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
retail-pipeline = "retail_pipeline.cli:main"
retail-api = "retail_pipeline.api:run"
retail-prepare-uci = "retail_pipeline.datasets.uci_online_retail:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retail_pipeline"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "data",
  "reports",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
