[project]
name = "airflow-data-quality-pipeline"
version = "1.0.0"
description = "Backend-first retail data pipeline with Airflow DAG, quality gates, DuckDB marts, and a FastAPI results API."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Iago Aragao" }
]
dependencies = [
  "duckdb>=1.0,<2",
  "fastapi>=0.115,<1",
  "pandas>=2.2,<4",
  "pydantic>=2.8,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
airflow = [
  "apache-airflow>=2.11,<3",
]
dev = [
  "httpx2>=2,<3",
  "pytest>=8,<10",
  "pytest-cov>=7,<8",
  "ruff>=0.6,<1",
]

[project.scripts]
retail-pipeline = "retail_pipeline.cli:main"
retail-api = "retail_pipeline.api:run"
retail-prepare-uci = "retail_pipeline.datasets.uci_online_retail:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retail_pipeline"]

[tool.uv]
package = true
required-version = "==0.9.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-config", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "data",
  "reports",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ARG", "C4", "C90", "PERF", "PIE", "PTH", "RUF", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.coverage.run]
branch = true
source = ["retail_pipeline"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
